[package]
name = "dprox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9.0"
tokio-tun = "0.7.0"
rand = "0.8.5"
