[package]
name = "dprox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
log = "0.4"
env_logger = "0.9.0"
tokio-tun = "0.7.0"
rand = "0.8.5"
serde_json = "1.0.94"
serde = "1.0.158"
clap = { version = "4.2.1", features = ["derive"] }
